load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "appendlayer_cmd.go",
        "createlayer_cmd.go",
        "desc_helpers.go",
        "digest_cmd.go",
        "gen_cmd.go",
        "index_cmd.go",
        "main.go",
        "manifest_cmd.go",
        "publishrules_cmd.go",
        "pull_cmd.go",
        "push_cmd.go",
        "pushblob_cmd.go",
    ],
    importpath = "github.com/DataDog/rules_oci/go/cmd/ocitool",
    visibility = ["//visibility:public"],
    deps = [
        "//go/internal/flagutil:go_default_library",
        "//go/internal/tarutil:go_default_library",
        "//go/pkg/blob:go_default_library",
        "//go/pkg/jsonutil:go_default_library",
        "//go/pkg/layer:go_default_library",
        "//go/pkg/ociutil:go_default_library",
        "@bazel_gazelle//rule:go_default_library",
        "@com_github_containerd_containerd//content:go_default_library",
        "@com_github_containerd_containerd//images:go_default_library",
        "@com_github_containerd_containerd//platforms:go_default_library",
        "@com_github_opencontainers_go_digest//:go_default_library",
        "@com_github_opencontainers_image_spec//specs-go:go_default_library",
        "@com_github_opencontainers_image_spec//specs-go/v1:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@com_github_urfave_cli_v2//:go_default_library",
        "@land_oras_oras_go//pkg/content:go_default_library",
        "@org_golang_x_sync//semaphore:go_default_library",
    ],
)

go_binary(
    name = "ocitool",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
