load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["docker.go"],
    importpath = "github.com/DataDog/rules_oci/go/pkg/credhelper",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_containerd_containerd//errdefs:go_default_library",
        "@com_github_containerd_containerd//remotes/docker:go_default_library",
        "@com_github_docker_docker_credential_helpers//client:go_default_library",
        "@com_github_mitchellh_go_homedir//:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
    ],
)
