load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["deb.go"],
    importpath = "github.com/DataDog/rules_oci/go/pkg/deb2layer",
    visibility = ["//visibility:public"],
    deps = ["@com_github_blakesmith_ar//:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = ["deb_test.go"],
    data = ["testdeb.deb"],
    embed = [":go_default_library"],
    deps = ["@com_github_stretchr_testify//assert:go_default_library"],
)
