load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "append.go",
        "appendlayeringester.go",
        "rebase.go",
    ],
    importpath = "github.com/DataDog/rules_oci/go/pkg/layer",
    visibility = ["//visibility:public"],
    deps = [
        "//go/pkg/ociutil:go_default_library",
        "@com_github_containerd_containerd//content:go_default_library",
        "@com_github_containerd_containerd//errdefs:go_default_library",
        "@com_github_containerd_containerd//images:go_default_library",
        "@com_github_containerd_containerd//images/converter:go_default_library",
        "@com_github_containerd_containerd//reference/docker:go_default_library",
        "@com_github_opencontainers_go_digest//:go_default_library",
        "@com_github_opencontainers_image_spec//specs-go/v1:go_default_library",
    ],
)
