load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "bazel.go",
        "desc.go",
        "diff.go",
        "fetch.go",
        "fs.go",
        "handler.go",
        "image.go",
        "json.go",
        "manifest.go",
        "multiprovider.go",
        "ociimagelayout.go",
        "platforms.go",
        "provider.go",
        "push.go",
        "repoing.go",
        "split.go",
        "tar.go",
        "writer.go",
    ],
    importpath = "github.com/DataDog/rules_oci/go/pkg/ociutil",
    visibility = ["//visibility:public"],
    deps = [
        "//go/internal/set:go_default_library",
        "//go/pkg/credhelper:go_default_library",
        "@com_github_containerd_containerd//content:go_default_library",
        "@com_github_containerd_containerd//errdefs:go_default_library",
        "@com_github_containerd_containerd//images:go_default_library",
        "@com_github_containerd_containerd//platforms:go_default_library",
        "@com_github_containerd_containerd//reference/docker:go_default_library",
        "@com_github_containerd_containerd//remotes:go_default_library",
        "@com_github_containerd_containerd//remotes/docker:go_default_library",
        "@com_github_opencontainers_go_digest//:go_default_library",
        "@com_github_opencontainers_image_spec//specs-go/v1:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@gazelle//rule:go_default_library",
        "@land_oras_oras_go//pkg/oras:go_default_library",
    ],
)
