load("@rules_pkg//pkg:mappings.bzl", "pkg_files")

exports_files(
    glob(["*.bzl"]),
    visibility = ["//oci:__subpackages__"],
)

pkg_files(
    name = "files",
    srcs = glob([
        "*.bzl",
        "*.bazel",
    ]),
    prefix = "oci/private/repositories",
    visibility = ["//release:__subpackages__"],
)
